tests/rosetta/out/Zig/apply-a-callback-to-an-array-2.error
zig build: exit status 1
/tmp/apply-a-callback-to-an-array-2.zig:31:138: error: expected ',' after initializer
